--- a/package.json
+++ b/package.json
@@ -15,5 +15,14 @@
   "bugs": {
     "url": "https://github.com/lukehjung/portfolio/issues"
   },
-  "homepage": "https://github.com/lukehjung/portfolio#readme"
+  "homepage": "https://github.com/lukehjung/portfolio#readme",
+  "dependencies": {
+    "glob-parent": ">=5.1.2",
+    "y18n": ">=3.2.2",
+    "ini": ">=1.3.6",
+    "kind-of": ">=6.0.3",
+    "path-parse": ">=1.0.7",
+    "hosted-git-info": ">=2.8.9",
+    "yargs-parser": ">=5.0.1"
+  }
 }
